src/objects/ImpactReport__c.object
<CustomObject>
    <fields>
        <fullName>Average_Bursary_Grant__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <inlineHelpText>Average bursary amount given</inlineHelpText>
        <label>Average Bursary Grant</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bursaries_Granted__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Bursaries Granted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bursary_funding_distributed__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Bursary funding distributed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Children_supported_into_own_home__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Children supported into own home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Claims_against_bondscash_deposits__c</fullName>
        <description>No. of claims made against bonds and/or cash deposits

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of claims made against bonds and/or cash deposits</inlineHelpText>
        <label>Claims against bonds/cash deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>created by Desa Markovic @Impact Box on 27/10/21</description>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Scheduled__c</fullName>
        <description>created by Desa Markovic @Impact Box on 27/10/21</description>
        <label>Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Eversheds_volunteers_engaged__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Eversheds volunteers engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Females_housed__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Females housed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <description>created by Desa Markovic @Impact Box on 26/10/21</description>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Impact Reports</relationshipLabel>
        <relationshipName>Impact_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Hours_of_Support_Delivered__c</fullName>
        <description>created by Desa Markovic @Impact Box on 26/20/21</description>
        <inlineHelpText>e.g. hours of counselling</inlineHelpText>
        <label>Hours of Support Delivered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImpactReportingForm__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <formula>CASE( RecordType.DeveloperName , 
&apos;HealthFundImpactReport&apos;, HYPERLINK(&apos;https://www.tfaforms.com/4943566/?&apos; +  &apos;tfa_32=&apos; +  Id + &apos;&amp;&apos; +&apos;tfa_35=&apos; + TEXT(ReportingPeriodStart__c) + &apos;&amp;&apos; + &apos;tfa_37=&apos; + TEXT(ReportingPeriodEnd__c) , &apos;Click Here&apos;),
&apos;EmployabilityFundImpactReport&apos;, HYPERLINK(&apos;https://www.tfaforms.com/4944120/?&apos; +  &apos;tfa_58=&apos; +  Id + &apos;&amp;&apos; +&apos;tfa_61=&apos; + TEXT(ReportingPeriodStart__c) + &apos;&amp;&apos; + &apos;tfa_63=&apos; + TEXT(ReportingPeriodEnd__c) , &apos;Click Here&apos;),
&apos;EmployabilityFundBursaryImpactReport&apos;, HYPERLINK(&apos;https://www.tfaforms.com/4947214/?&apos; +  &apos;tfa_32=&apos; +  Id + &apos;&amp;&apos; +&apos;tfa_35=&apos; + TEXT(ReportingPeriodStart__c) + &apos;&amp;&apos; + &apos;tfa_37=&apos; + TEXT(ReportingPeriodEnd__c) , &apos;Click Here&apos;),
&apos;FutureBuildersImpactReport&apos;, HYPERLINK(&apos;https://www.tfaforms.com/4946067/?&apos; +  &apos;tfa_29=&apos; +  Id , &apos;Click Here&apos;),
&apos;&apos;)</formula>
        <inlineHelpText>Send this link to organisations to submit their impact reporting</inlineHelpText>
        <label>Impact Reporting Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improved_Self_Esteem__c</fullName>
        <description>created by Desa Markovic @Impact Box on 27/10/21</description>
        <label>% Improved Self Esteem</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Males_housed__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Males housed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>More_Positive_About_Future__c</fullName>
        <description>created by Desa Markovic @Impact Box on 27/10/21</description>
        <label>% More Positive About Future</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Movein_Grants_provided_to_YPs__c</fullName>
        <description>No. of move-in grants provided to young people

created by Desa Markovic @Impact Box</description>
        <label>Move-in Grants provided to YPs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_landlords_engaged__c</fullName>
        <description>No. of new landlords engaged 

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of new landlords engaged</inlineHelpText>
        <label>New landlords engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Positive_moveons_from_Housing_Fund__c</fullName>
        <description>No. of positive move-ons from Housing Fund support

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of positive move-ons from Housing Fund support</inlineHelpText>
        <label>Positive move-ons from Housing Fund</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Private_Tenancies__c</fullName>
        <description>No. of private tenancies

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of private tenancies</inlineHelpText>
        <label>Private Tenancies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProgrammeName__c</fullName>
        <formula>TEXT(Grant__r.Programme__c)</formula>
        <label>Programme Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualifications_Achieved__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Qualifications Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RecipientEmail__c</fullName>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RecipientName__c</fullName>
        <formula>Grant__r.ReportingContact__r.FirstName &amp; &quot; &quot;&amp; Grant__r.ReportingContact__r.LastName</formula>
        <label>Recipient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Overview__c</fullName>
        <description>created by Desa Markovic @Impacgt Box on 26/10/21</description>
        <inlineHelpText>An overview of the types of activities delivered, successes, challenges, details of outcomes achieved, plans for next quarter</inlineHelpText>
        <label>Report Overview</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReportingPeriodEnd__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Reporting Period End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReportingPeriodStart__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Reporting Period Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SessionsDelivered__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Sessions Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Social_Tenancies__c</fullName>
        <description>No. of social tenancies (where there is a financial obstacle)

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of social tenancies (where there is a financial obstacle)</inlineHelpText>
        <label>Social Tenancies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tenancy_breakdowns__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Tenancy breakdowns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tenancies__c</fullName>
        <description>Total no. of tenancies supported (private and social)

created by Desa Markovic @Impact Box</description>
        <label>Total Tenancies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_YP_Engaged__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>Total YP Engaged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_EET_3_or_more_months__c</fullName>
        <description>No. of YP sustaining EET for 3 months or longer

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of YP sustaining EET for 3 months or longer</inlineHelpText>
        <label>YP EET 3 or more months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_Entering_EET__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>YP Entering EET</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_FullTime_Employment__c</fullName>
        <description>No. YP accessing: full-time employment for YP over 18 (one month completed)

created by Desa Markovic @Impact box</description>
        <inlineHelpText>No. YP accessing: full-time employment for YP over 18 (one month completed)</inlineHelpText>
        <label>YP Full-Time Employment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_Further_Education__c</fullName>
        <description>No. of YP accessing: further/higher education

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of YP accessing: further/higher education</inlineHelpText>
        <label>YP Further Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_PartTime_Employment__c</fullName>
        <description>No. of YP accessing: part-time employment (one month completed)

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of YP accessing: part-time employment (one month completed)</inlineHelpText>
        <label>YP Part-Time Employment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_Volunteering_Placement__c</fullName>
        <description>No. of YP accessing: volunteering placement of 6 weeks or more.

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of YP accessing: volunteering placement of 6 weeks or more</inlineHelpText>
        <label>YP Volunteering Placement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_With_Apprenticeship__c</fullName>
        <description>No. of YP accessing: traineeship of 12 weeks or more 

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of YP accessing: traineeship of 12 weeks or more</inlineHelpText>
        <label>YP With Apprenticeship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_With_Traineeship__c</fullName>
        <description>No. of YP accessing: traineeship of 12 weeks or more 

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of YP accessing: traineeship of 12 weeks or more</inlineHelpText>
        <label>YP With Traineeship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YP_supported_into_own_home__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>YP supported into own home</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_Housed_in_a_Future_Builders_Property__c</fullName>
        <description>created by Desa Markovic @Impact Box</description>
        <label>YPs Housed in a Future Builders Property</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_maintaining_3_month_tenancy__c</fullName>
        <description>No. of young people who have been set-up on a savings plan

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of young people who have been set-up on a savings plan</inlineHelpText>
        <label>YPs maintaining 3 month tenancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_maintaining_6_month_tenancy__c</fullName>
        <description>No. of young people who have been set-up on a savings plan

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of young people who have been set-up on a savings plan</inlineHelpText>
        <label>YPs maintaining 6 month tenancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_moved_on_with_full_deposit_saved__c</fullName>
        <description>No. of young people who have moved on with full deposit saved

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of young people who have moved on with full deposit saved</inlineHelpText>
        <label>YPs moved on with full deposit saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_moved_on_with_no_saved_deposit__c</fullName>
        <description>No. of young people who have moved on with no deposit saved

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of young people who have moved on with no deposit saved</inlineHelpText>
        <label>YPs moved on with no saved deposit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_moved_on_with_some_deposit_saved__c</fullName>
        <description>No. of young people who have moved on with no deposit saved

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of young people who have moved on with no deposit saved</inlineHelpText>
        <label>YPs moved on with some deposit saved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_on_savings_plan__c</fullName>
        <description>No. of young people who have been set-up on a savings plan

created by Desa Markovic @Impact Box</description>
        <label>YPs on savings plan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YPs_referred_or_accessing_support__c</fullName>
        <description>No. of young people referred to the scheme/ accessing pre-tenancy support.

created by Desa Markovic @Impact Box</description>
        <inlineHelpText>No. of young people referred to the scheme/ accessing pre-tenancy support.</inlineHelpText>
        <label>YPs referred or accessing support</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Young_People_Supported__c</fullName>
        <description>created by Desa Markovic @Impact Box on 26/20/21</description>
        <label>Young People Supported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Impact Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Impact Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impact Reports</pluralLabel>
    <recordTypes>
        <fullName>EmployabilityFundBursaryImpactReport</fullName>
        <active>true</active>
        <label>Employability Fund Bursary Impact Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmployabilityFundImpactReport</fullName>
        <active>true</active>
        <label>Employability Fund Impact Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>FutureBuildersImpactReport</fullName>
        <active>true</active>
        <label>Future Builders Impact Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthFundImpactReport</fullName>
        <active>true</active>
        <label>Health Fund Impact Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>HousingFundImpactReport</fullName>
        <active>true</active>
        <label>Housing Fund Impact Report</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>